# codigo-llm

./: README.md  langchain-from-rag-to-production.ipynb
from-rag-to-deploy/: .gitignore  Dockerfile  README.md  langchain-from-rag-to-production.ipynb  pyproject.toml
from-rag-to-deploy/app/: server.py
llama-index/: llama_index-SimpleDirectoryReader.ipynb  llama_index-metadata-advanced.ipynb  llama_index-metadata.ipynb
llm-gemini-extraction/: gemini-invoice-extraction.ipynb
ocr-vs-llms/: comparativa.ipynb
ocr/sparrow-data/: run_ocr.py
ocr/sparrow-data/docs/input/invoices/processed/ocr/: invoice_0_charspace_1.json
ss/: gemini-invoice-extraction.ipynb
structured-ouputs/: multi-agent-sdk.ipynb  openai-structured-outputs.ipynb  structured-output-entity-extraction.ipynb  structured-output-math-tutor.ipynb  structured-output-text-summarization.ipynb
